--- a/app/views/layouts/admin/application.html.erb
+++ b/app/views/layouts/admin/application.html.erb
@@ -4,14 +4,11 @@
     <title><%= "#{yield(:title)} | " if content_for?(:title) %>PlaceCal Admin</title>
     <%= csrf_meta_tags %>
 
-    <link rel="stylesheet" href="/assets/tom-select.css" media="all" data-turbo-track="reload">
-    <link rel="stylesheet" href="/assets/admin_tailwind.css" media="all" data-turbo-track="reload">
+    <%= stylesheet_link_tag "admin_tailwind", media: "all", "data-turbo-track": "reload" %>
 
-    <%# Admin JS loaded via importmap - native ES modules, no build step %>
-    <%# Changes to controllers take effect immediately on browser refresh %>
     <%# ES Module Shims - polyfill for import maps in older browsers (Chrome 63+, Firefox 67+, Safari 11.1+) %>
     <%# Only activates when needed (~6% of browsers), zero overhead for modern browsers %>
-    <script async src="https://ga.jspm.io/npm:es-module-shims@2.0.0/dist/es-module-shims.js"></script>
+    <%= javascript_include_tag "es-module-shims", async: true %>
     <%= javascript_importmap_tags %>
 
     <%= render "layouts/meta" %>
