--- a/app/views/layouts/admin/_admin_leftbar.html.erb
+++ b/app/views/layouts/admin/_admin_leftbar.html.erb
@@ -7,12 +7,12 @@
     <%= t('admin.leftbar.content_types') %>
   </h6>
   <ul class="space-y-1 px-2">
-    <%= admin_nav_link(t('admin.leftbar.partners'), admin_partners_path, :partner) if policy(Partner).index? %>
-    <%= admin_nav_link(t('admin.leftbar.calendars'), admin_calendars_path, :calendar) if policy(Calendar).index? %>
-    <%= admin_nav_link(t('admin.leftbar.users'), admin_users_path, :users) if policy(User).index? %>
-    <%= admin_nav_link(t('admin.leftbar.sites'), admin_sites_path, :site) if policy(Site).index? %>
-    <%= admin_nav_link(t('admin.leftbar.neighbourhoods'), admin_neighbourhoods_path, :neighbourhood) if policy(Neighbourhood).index? %>
-    <%= admin_nav_link(t('admin.leftbar.partnerships'), admin_partnerships_path, :partnership) if policy(Partnership).index? %>
+    <%= admin_nav_link(human_model_name(Partner, count: 2), admin_partners_path, :partner) if policy(Partner).index? %>
+    <%= admin_nav_link(human_model_name(Calendar, count: 2), admin_calendars_path, :calendar) if policy(Calendar).index? %>
+    <%= admin_nav_link(human_model_name(User, count: 2), admin_users_path, :users) if policy(User).index? %>
+    <%= admin_nav_link(human_model_name(Site, count: 2), admin_sites_path, :site) if policy(Site).index? %>
+    <%= admin_nav_link(human_model_name(Neighbourhood, count: 2), admin_neighbourhoods_path, :neighbourhood) if policy(Neighbourhood).index? %>
+    <%= admin_nav_link(human_model_name(Partnership, count: 2), admin_partnerships_path, :partnership) if policy(Partnership).index? %>
   </ul>
 
   <h6 class="px-4 mt-6 mb-2 text-xs font-semibold text-gray-600 uppercase tracking-wider">
@@ -35,10 +35,10 @@
       <%= t('admin.leftbar.in_development') %>
     </h6>
     <ul class="space-y-1 px-2">
-      <%= admin_nav_link(t('admin.leftbar.tags'), admin_tags_path, :tag, root_only: true) if policy(Tag).index? %>
-      <%= admin_nav_link(t('admin.leftbar.articles'), admin_articles_path, :article) if policy(Article).index? %>
-      <%= admin_nav_link(t('admin.leftbar.collections'), admin_collections_path, :list, root_only: true) if policy(Collection).index? %>
-      <%= admin_nav_link(t('admin.leftbar.supporters'), admin_supporters_path, :credit_card, root_only: true) if policy(Supporter).index? %>
+      <%= admin_nav_link(human_model_name(Tag, count: 2), admin_tags_path, :tag, root_only: true) if policy(Tag).index? %>
+      <%= admin_nav_link(human_model_name(Article, count: 2), admin_articles_path, :article) if policy(Article).index? %>
+      <%= admin_nav_link(human_model_name(Collection, count: 2), admin_collections_path, :list, root_only: true) if policy(Collection).index? %>
+      <%= admin_nav_link(human_model_name(Supporter, count: 2), admin_supporters_path, :credit_card, root_only: true) if policy(Supporter).index? %>
       <%= admin_nav_link(t('admin.leftbar.import_status'), admin_jobs_path, :cog, root_only: true) if current_user.root? %>
     </ul>
   <% end %>
