fix: Use simple FlashComponent for public site
The public layout was using Admin::FlashComponent which renders SVG
icons with Tailwind classes (w-6 h-6). These classes don't exist on
the public site CSS, causing the icon to render at full size.

Created a simple FlashComponent that uses the existing SCSS alert
styles instead of Tailwind/daisyUI components.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
         <%= render_component "navigation", navigation: @navigation %>
       </header>
       <main>
-        <%= render(Admin::FlashComponent.new) %>
+        <%= render(FlashComponent.new) %>
         <%= yield %>
       </main>
       <footer>
