Complete mountain_view to ViewComponent migration
- Migrate all 9 remaining components from MountainView::Presenter to ViewComponent::Base:
  - NavigationComponent
  - ProfileComponent
  - AudienceComponent
  - AudienceIntroComponent
  - ImpactStoryComponent
  - EventComponent
  - PaginatorComponent
  - EventListComponent

- Flatten component directory structure (move from subdirectories to app/components/)
- Move component SCSS to app/assets/stylesheets/components/
- Delete unused components (dashboard_card, place)
- Remove mountain_view gem from Gemfile
- Remove mountain_view layout and styleguide files
- Update all view files to use render(ComponentName.new(...))
- Add comprehensive specs for all migrated components

Fixes #2270

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,7 +2,7 @@
 <% content_for :image, @site.og_image %>
 <% content_for :description, html_to_plaintext(@event.description_html) %>
 
-<%= render_component "event", context: :page, event: @event, primary_neighbourhood: @primary_neighbourhood %>
+<%= render(EventComponent.new(context: :page, event: @event, primary_neighbourhood: @primary_neighbourhood, site_tagline: @site.tagline)) %>
 
 <div class="c c--narrowish c--space-after event__fullinfo">
   <%= @event.description_html.to_s.html_safe %>
