--- a/app/views/sites/mossley.html.erb
+++ b/app/views/sites/mossley.html.erb
@@ -30,7 +30,7 @@
     <p>We provide training and support to help you publish your events and promote your activities.</p>
     <%= @site.description_html.to_s.html_safe %>
     <% if @site.site_admin.present? %>
-      <%= render_component 'profile', user: @site.site_admin %>
+      <%= render(ProfileComponent.new(user: @site.site_admin)) %>
     <% end %>
   </div>
 </section>
