--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -30,17 +30,18 @@
 
   <hr>
 
-  <%= render_component "event_list",
+<%= render(EventListComponent.new(
     events: @events,
     pointer: @collection.start_date,
     period: @period,
     sort: @sort,
     path: "collections/#{@collection.id}",
     show_breadcrumb: false,
-    show_paginator: false
-  %>
+    show_paginator: false,
+    site_name: @site.name,
+    primary_neighbourhood: @primary_neighbourhood,
+    show_neighbourhoods: @current_site.show_neighbourhoods?,
+    badge_zoom_level: @current_site.badge_zoom_level,
+    site_tagline: @site.tagline
+  )) %>
 </div>
-
-<% if @map&.any? %>
-  <%# = render_component "map", points: @map, site: @current_site.slug %>
-<% end %>
