--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,13 +5,19 @@
 <%= render(HeroComponent.new("Events & activities", @site.tagline)) %>
 
 <div class="c c--lg-space-after">
-  <%= render_component "event_list",
+<%= render(EventListComponent.new(
     events: @events,
     pointer: @current_day,
     period: @period,
     sort: @sort,
-    repeating: @repeating
-  %>
+    repeating: @repeating,
+    site_name: @site.name,
+    primary_neighbourhood: @primary_neighbourhood,
+    show_neighbourhoods: @current_site.show_neighbourhoods?,
+    badge_zoom_level: @current_site.badge_zoom_level,
+    next_date: @next,
+    site_tagline: @site.tagline
+  )) %>
 </div>
 
 <%= render(Meta.new('/hello/world')) do |component| %>
