--- a/app/views/partners/show.html.erb
+++ b/app/views/partners/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for :title, @partner.name %>
-<% 
+<%
   if @partner.image.present?
     content_for :image, @partner.image
   else
@@ -103,15 +103,21 @@
     <hr>
 
     <% if @events.any? || @paginator %>
-      <%= render_component "event_list",
+<%= render(EventListComponent.new(
         events: @events,
         pointer: @current_day,
         period: @period,
         sort: @sort,
         path: "partners/#{@partner.id}/events",
         show_breadcrumb: false,
-        show_paginator: @paginator
-      %>
+        show_paginator: @paginator,
+        site_name: @site.name,
+        primary_neighbourhood: @primary_neighbourhood,
+        show_neighbourhoods: @current_site.show_neighbourhoods?,
+        badge_zoom_level: @current_site.badge_zoom_level,
+        next_date: @next,
+        site_tagline: @site.tagline
+      )) %>
     <% else %>
       <p><em><%= @no_event_message %></em></p>
     <% end %>
