fix: Pass site to NavigationComponent
ViewComponent templates don't have access to controller instance
variables directly. Pass @site as a parameter to NavigationComponent
so the site name and logo are rendered correctly in the navigation.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
   <body>
     <div class="background">
       <header>
-        <%= render(NavigationComponent.new(navigation: @navigation)) %>
+        <%= render(NavigationComponent.new(navigation: @navigation, site: @site)) %>
       </header>
       <main>
         <%= render(Admin::FlashComponent.new) %>
