--- a/app/components/audience_intro_component.html.erb
+++ b/app/components/audience_intro_component.html.erb
@@ -2,7 +2,7 @@
   <h1 class="section"><%= title %></h1>
 </div>
 
-<div class="card card--plain audience pattern pattern--audience reveal js-reveal">
+<div class="card card--plain audience pattern pattern--audience reveal" data-controller="reveal">
   <div class="reveal__teaser">
     <h2 class="center alt-title"><%= subtitle.html_safe %></h2>
     <div class="audience__photo">
@@ -16,5 +16,5 @@
     <%= link_to "Our story", our_story_path, class: 'btn btn--big btn--home-3' %>
     <%= link_to "See it in action", find_placecal_path, class: 'btn btn--big btn--home-3' %>
   </div>
-  <button class="reveal__button">Open to read more</button>
+  <button class="reveal__button" data-reveal-target="button" data-action="click->reveal#toggle">Open to read more</button>
 </div>
