--- a/app/components/paginator_component.html.erb
+++ b/app/components/paginator_component.html.erb
@@ -1,13 +1,13 @@
-<div class="paginator" id="paginator">
+<div class="paginator" id="paginator" data-controller="paginator">
   <div class="paginator__context">
     <% if show_breadcrumb %>
       <%= render(BreadcrumbComponent.new(trail: [['Events', events_path]], site_name: site_name)) do %>
-        <div class="breadcrumb__filters filters">
-          <%= form_tag('', method: :get, class: 'filters__form js-filters-form', enforce_utf8: false) do %>
-            <div class="js-filters-toggle filters__toggle">
-                <a href="#" data-turbo="false"><span class="icon icon--arrow-down">↓</span> <span class="filters__link">Filter and sort</span></a>
+        <div class="breadcrumb__filters filters" data-controller="filters">
+          <%= form_tag('', method: :get, class: 'filters__form', enforce_utf8: false, data: { filters_target: 'form', action: 'change->filters#submit' }) do %>
+            <div class="filters__toggle">
+                <a href="#" data-turbo="false" data-action="click->filters#toggle"><span class="icon icon--arrow-down">↓</span> <span class="filters__link">Filter and sort</span></a>
             </div>
-            <div class="filters__dropdown filters__dropdown--hidden js-filters-dropdown">
+            <div class="filters__dropdown filters__dropdown--hidden" data-filters-target="dropdown">
               <!-- Date or time sort -->
               <div class="filters__group">
                 <div class="filters__option">
@@ -61,7 +61,7 @@
   <% if @period == 'day' || @period == 'week' %>
     <ol class="paginator__buttons paginator__buttons--day">
       <% paginator.each do |page| %>
-        <li class="<%= page[:css] %>">
+        <li class="<%= page[:css] %>" <%= page[:data].map { |k, v| "data-#{k.to_s.dasherize}=\"#{v}\"" }.join(' ').html_safe %>>
           <%= link_to page[:text], page[:link] %>
         </li>
       <% end %>
