--- a/app/views/pages/our_story.html.erb
+++ b/app/views/pages/our_story.html.erb
@@ -7,7 +7,7 @@
     <p class="alt-title-small">We wanted to examine the causes of social isolation and loneliness within neighbourhoods in order to figure out how to combat them. </p>
   </div>
 
-  <div class="card card--plain pattern pattern--research reveal reveal--ourstory js-reveal">
+  <div class="card card--plain pattern pattern--research reveal reveal--ourstory" data-controller="reveal">
     <div class="our_story__intro">
       <div class="reveal__teaser">
         <p>We spoke to over 6,000 people in Manchester and divested over £200,000 in funds directly to community groups.</p>
@@ -19,14 +19,14 @@
         <p>We continued to work with age friendly partnerships in Hulme and Moss Side (our pilot area, where we are based) to find out why.</p>
       </div>
     </div>
-    <button class="reveal__button">Open to read more</button>
+    <button class="reveal__button" data-reveal-target="button" data-action="click->reveal#toggle">Open to read more</button>
   </div>
 
   <!-- PROBLEMS -->
 
   <h2 class="fc-primary center">We found three big problems</h2>
 
-  <div class="card card--plain reveal reveal--ourstory reveal--clip-right js-reveal">
+  <div class="card card--plain reveal reveal--ourstory reveal--clip-right" data-controller="reveal">
     <div class="reveal__teaser">
       <h3>People were not working together</h3>
       <%= image_tag "home/our_story/not_together.png" %>
@@ -36,10 +36,10 @@
       <p>This top-down approach of people in large institutions trying to gather information on small community groups was inefficient and missed out large swathes of activities and groups.</p>
       <p>It also resulted in duplication, or several low quality results rather than one really good one.</p>
     </div>
-    <button class="reveal__button">Open to read more</button>
+    <button class="reveal__button" data-reveal-target="button" data-action="click->reveal#toggle">Open to read more</button>
   </div>
 
-  <div class="card card--plain reveal reveal--ourstory reveal--clip-left js-reveal">
+  <div class="card card--plain reveal reveal--ourstory reveal--clip-left" data-controller="reveal">
     <div class="reveal__teaser">
       <h3>Current software wasn’t working</h3>
       <%= image_tag "home/our_story/current_software.png" %>
@@ -48,10 +48,10 @@
     <div class="reveal__body">
       <p>This meant that community groups had to input their information in one site for each provider, in addition to social media sites like Facebook, Twitter and Instagram, creating an ever-increasing amount of work for a very small amount of publicity.</p>
     </div>
-    <button class="reveal__button">Open to read more</button>
+    <button class="reveal__button" data-reveal-target="button" data-action="click->reveal#toggle">Open to read more</button>
   </div>
 
-  <div class="card card--plain reveal reveal--ourstory reveal--clip-right js-reveal">
+  <div class="card card--plain reveal reveal--ourstory reveal--clip-right" data-controller="reveal">
     <div class="reveal__teaser">
       <h3>Tech skills are very low</h3>
       <%= image_tag "home/our_story/no_tech_skills.png" %>
@@ -61,7 +61,7 @@
       <p>Staff at many institutions have felt equally left behind by recent innovations.</p>
       <p>Most groups in our neighbourhood had never published anything online about their group at all, relying completely on word of mouth and thereby missing out on many opportunities to connect with new and enthusiastic participants.</p>
     </div>
-    <button class="reveal__button">Open to read more</button>
+    <button class="reveal__button" data-reveal-target="button" data-action="click->reveal#toggle">Open to read more</button>
   </div>
 
   <!-- SOLUTIONS -->
@@ -75,7 +75,7 @@
     <br>
   </div>
 
-  <div class="card card--plain reveal reveal--ourstory reveal--right js-reveal">
+  <div class="card card--plain reveal reveal--ourstory reveal--right" data-controller="reveal">
     <div class="reveal__teaser">
       <h3>Collective, not-for-profit ownership</h3>
       <%= image_tag "home/our_story/collective_ownership.png" %>
@@ -84,10 +84,10 @@
     <div class="reveal__body">
       <p>This supports the existing efforts being done in neighbourhoods by partnerships of councils, community organisers, and public health services.</p>
     </div>
-    <button class="reveal__button">Open to read more</button>
+    <button class="reveal__button" data-reveal-target="button" data-action="click->reveal#toggle">Open to read more</button>
   </div>
 
-  <div class="card card--plain reveal reveal--ourstory reveal--left js-reveal">
+  <div class="card card--plain reveal reveal--ourstory reveal--left" data-controller="reveal">
     <div class="reveal__teaser">
       <h3>Software built on existing tools</h3>
       <%= image_tag "home/our_story/use_existing_tools.png" %>
@@ -96,10 +96,10 @@
     <div class="reveal__body">
       <p>These listings are then converted into super simple, highly accessible and constantly updated listings for each neighbourhood, community group and venue.</p>
     </div>
-    <button class="reveal__button">Open to read more</button>
+    <button class="reveal__button" data-reveal-target="button" data-action="click->reveal#toggle">Open to read more</button>
   </div>
 
-  <div class="card card--plain reveal reveal--ourstory reveal--right js-reveal">
+  <div class="card card--plain reveal reveal--ourstory reveal--right" data-controller="reveal">
     <div class="reveal__teaser">
       <h3>A training program that includes everyone</h3>
       <%= image_tag "home/our_story/training.png" %>
@@ -109,7 +109,7 @@
       <p>It operates on a ‘train-the-trainers’ basis, so key people in the community can pass on their knowledge to other groups and organisations.</p>
       <p>This means no one is left behind, helping to close the ‘digital divide’.</p>
     </div>
-    <button class="reveal__button">Open to read more</button>
+    <button class="reveal__button" data-reveal-target="button" data-action="click->reveal#toggle">Open to read more</button>
   </div>
 
   <!-- JOIN -->
