Refactor events browser with Turbo Frames and ViewComponents
- Create EventsQuery service object for filtering/sorting logic
- Create EventsBrowserComponent to orchestrate events browser
- Create EventsFiltersComponent for filter controls with Turbo Frame
- Create EventsPaginatorComponent for date navigation
- Simplify EventListComponent (remove paginator/breadcrumb logic)
- Update EventsController to use query object
- Update filters_controller.js to use requestSubmit() for Turbo
- Update events/index.html.erb to use new component structure
- Update partners/show and collections/show for simplified interface

Turbo Frames enable seamless filter/pagination updates without
full page reloads.

Closes #2481

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,17 +5,17 @@
 <%= render(HeroComponent.new("Events & activities", @site.tagline)) %>
 
 <div class="c c--lg-space-after">
-<%= render(EventListComponent.new(
+  <%= render(EventsBrowserComponent.new(
     events: @events,
-    pointer: @current_day,
+    current_day: @current_day,
     period: @period,
     sort: @sort,
     repeating: @repeating,
-    site_name: @site.name,
+    site: @site,
+    next_date: @next_date,
     primary_neighbourhood: @primary_neighbourhood,
     show_neighbourhoods: @current_site.show_neighbourhoods?,
     badge_zoom_level: @current_site.badge_zoom_level,
-    next_date: @next,
     site_tagline: @site.tagline
   )) %>
 </div>
