--- a/app/components/event_list_component.html.erb
+++ b/app/components/event_list_component.html.erb
@@ -1,31 +1,24 @@
-<% if show_paginator %>
-  <%= render(PaginatorComponent.new(
-    pointer: pointer,
-    period: period,
-    sort: sort,
-    repeating: repeating,
-    path: path,
-    show_breadcrumb: show_breadcrumb,
-    site_name: site_name
-  )) %>
-<% end %>
-<% if events.any? %>
+<% if events? %>
   <% events.each do |day, day_events| %>
     <h2 class="udl udl--fw"><%= day.strftime('%A %e %B') %></h2>
     <ol class="events reset">
       <% day_events.each do |event| %>
         <li>
-<%= render(EventComponent.new(context: period,
-                                        event: event,
-                                        primary_neighbourhood: primary_neighbourhood,
-                                        show_neighbourhoods: show_neighbourhoods,
-                                        badge_zoom_level: badge_zoom_level,
-                                        site_tagline: site_tagline)) %>
+          <%= render(EventComponent.new(
+            context: period,
+            event: event,
+            primary_neighbourhood: primary_neighbourhood,
+            show_neighbourhoods: show_neighbourhoods,
+            badge_zoom_level: badge_zoom_level,
+            site_tagline: site_tagline
+          )) %>
         </li>
       <% end %>
     </ol>
   <% end %>
 <% else %>
   <p>No events with this selection.</p>
-  <p><%= link_to 'Skip to next date with events.', helpers.next_url(next_date) if next_date.present? %></p>
+  <% if next_url.present? %>
+    <p><%= link_to 'Skip to next date with events.', next_url, data: { turbo_frame: 'events-browser' } %></p>
+  <% end %>
 <% end %>
