--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,17 +5,17 @@
 <%= render(HeroComponent.new("Events & activities", @site.tagline)) %>
 
 <div class="c c--lg-space-after">
-  <%= render(EventsBrowserComponent.new(
+<%= render(EventListComponent.new(
     events: @events,
-    current_day: @current_day,
+    pointer: @current_day,
     period: @period,
     sort: @sort,
     repeating: @repeating,
-    site: @site,
-    next_date: @next_date,
+    site_name: @site.name,
     primary_neighbourhood: @primary_neighbourhood,
     show_neighbourhoods: @current_site.show_neighbourhoods?,
     badge_zoom_level: @current_site.badge_zoom_level,
+    next_date: @next,
     site_tagline: @site.tagline
   )) %>
 </div>
