Fix nil hero_image error on home page

--- a/app/components/neighbourhood_home_card_component.html.erb
+++ b/app/components/neighbourhood_home_card_component.html.erb
@@ -1,5 +1,5 @@
 <li class="neighbourhood_home_card">
-  <img aria-hidden="true" class="neighbourhood_home_card__image" src="<%= @site.hero_image.url %>" alt="">
+  <img aria-hidden="true" class="neighbourhood_home_card__image" src="<%= @site.hero_image&.url %>" alt="">
   <h4 class="neighbourhood_home_card__name">
     <%= @site.place_name %>
   </h4>
