Simplify JS to single application.js entrypoint with eagerLoadControllersFrom
- Replace separate admin.js/public.js with unified application.js
- Use eagerLoadControllersFrom for automatic Stimulus controller loading
- Update manifest.js to link application.js instead of admin.js/public.js
- Update importmap.rb for single entrypoint
- Fix filter dropdown width (white-space: nowrap)
- Add experimental paginator window logic for week view
- Remove overflow:hidden from paginator to fix clipping

--- a/app/assets/stylesheets/components/filters.scss
+++ b/app/assets/stylesheets/components/filters.scss
@@ -23,7 +23,8 @@
 		position: absolute;
 		top: 2rem;
 		z-index: 500;
-		text-align: center;
+		text-align: left;
+		white-space: nowrap;
 
 		&--category {
 			left: -1rem;
