--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= render "layouts/meta" %>
     <%= render "layouts/plausible" %>
     <%= javascript_include_tag "es-module-shims", async: true %>
-    <%= javascript_importmap_tags "public" %>
+    <%= javascript_importmap_tags %>
     <meta name="turbo-refresh-method" content="morph">
   </head>
 
