--- a/app/components/paginator_component.html.erb
+++ b/app/components/paginator_component.html.erb
@@ -2,11 +2,28 @@
   <div class="paginator__context">
     <% if show_breadcrumb %>
       <%= render(BreadcrumbComponent.new(trail: [['Events', events_path]], site_name: site_name)) do %>
-        <div class="breadcrumb__filters filters" data-controller="filters">
-          <%= form_tag('', method: :get, class: 'filters__form', enforce_utf8: false, data: { turbo_frame: 'events-browser', turbo_action: 'advance', filters_target: 'form', action: 'change->filters#submit' }) do %>
-            <div class="filters__toggle">
-                <a href="#" data-turbo="false" data-action="click->filters#toggle"><span class="icon icon--arrow-down">↓</span> <span class="filters__link">Filter and sort</span></a>
+        <div class="breadcrumb__actions">
+          <div class="breadcrumb__date-picker" data-controller="date-picker">
+            <% unless today? %>
+              <%= link_to 'Today', today_url, class: 'breadcrumb__today', data: { turbo_frame: 'events-browser', turbo_action: 'advance' } %>
+            <% end %>
+            <a href="#" data-turbo="false" data-action="click->date-picker#toggle" class="breadcrumb__date-picker-toggle">
+              <span class="icon icon--arrow-down">↓</span> <span class="breadcrumb__date-picker-label">Go to date</span>
+            </a>
+            <div class="breadcrumb__date-picker-dropdown breadcrumb__date-picker-dropdown--hidden" data-date-picker-target="dropdown">
+              <%= form_tag('', method: :get, class: 'date-picker__form', data: { turbo_frame: 'events-browser', turbo_action: 'advance', action: 'change->date-picker#submit' }) do %>
+                <%= date_field_tag :date, pointer, data: { date_picker_target: 'input' } %>
+                <%= hidden_field_tag :period, period %>
+                <%= hidden_field_tag :sort, sort %>
+                <%= hidden_field_tag :repeating, repeating %>
+              <% end %>
             </div>
+          </div>
+          <div class="breadcrumb__filters filters" data-controller="filters">
+            <%= form_tag('', method: :get, class: 'filters__form', enforce_utf8: false, data: { turbo_frame: 'events-browser', turbo_action: 'advance', filters_target: 'form', action: 'change->filters#submit' }) do %>
+              <div class="filters__toggle">
+                  <a href="#" data-turbo="false" data-action="click->filters#toggle"><span class="icon icon--arrow-down">↓</span> <span class="filters__link">Filter and sort</span></a>
+              </div>
             <div class="filters__dropdown filters__dropdown--hidden" data-filters-target="dropdown">
               <!-- Date or time sort -->
               <div class="filters__group">
@@ -53,6 +70,7 @@
               </div>
             </div>
           <% end %>
+          </div>
         </div>
       <% end %>
     <% end %>
